# EvolutionaryAlgorithm

./: .gitignore  CMakeLists.txt  CSVFileWriter.cpp  CSVFileWriter.hpp  EvolutionaryAlgorithm.cpp  EvolutionaryAlgorithm.hpp  READMe.md  common.cpp  common.hpp  main.cpp  make_charts.py  nowy.csv  run_evolutionary_algorithm.py
CrossoverAlgorithm/: AbstractCrossoverAlgorithm.cpp  AbstractCrossoverAlgorithm.hpp  CrossoverAlgorithm.cpp  CrossoverAlgorithm.hpp  KpointCrossover.cpp  KpointCrossover.h  UniformCrossover.cpp  UniformCrossover.h
Mutation/: AbstractMutation.cpp  AbstractMutation.hpp  Mutation.cpp  Mutation.h
ScoringFunction/: AbstractScoringFunction.cpp  AbstractScoringFunction.hpp  LinearScoringFunction.cpp  LinearScoringFunction.hpp  PolynomalScore.cpp  PolynomalScore.h  ScoringFunction.cpp  ScoringFunction.hpp
SelectionAlgorithm/: AbstractSelectionAlgorithm.cpp  AbstractSelectionAlgorithm.hpp  RouletteSelection.cpp  RouletteSelection.h  ThresholdSelection.cpp  ThresholdSelection.hpp  TournamentSelection.cpp  TournamentSelection.hpp
doc/: doc.aux  doc.tex  notes.txt
